--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 out/
+*.class
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,6 +11,8 @@ out/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target
 
 .idea/
 *.iml
+/bin
